feat: setup playwright mcp agent with docker and sse server.
- Added Dockerfile and docker-compose for Playwright sandbox
- Configured MCP server with SSE transport on port 3100
- Added initial seed tests and agent prompt templates
- Successfully verified browser navigation and snapshot tools

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,14 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# --- Playwright & Allure Specific ---
+# תיקיית תוצאות הבדיקה (צילומי מסך, וידאו)
+test-results/
+# קבצי המקור של דוח אלור (JSON, CSV)
+allure-results/
+# הדוח הסופי שנוצר מאלור (HTML)
+allure-report/
+# דוחות ברירת מחדל של פליירייט
+playwright-report/
+blob-report/
